# MyStarWars

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
inc/: IMovingObject.h  IRotatingObject.h  MoveComand.h  MyAngle.h  MySpaceship.h  MyVector.h  RotateComand.h
src/: CMakeLists.txt  IMovingObject.cpp  IRotatingObject.cpp  MoveComand.cpp  MyAngle.cpp  MySpaceship.cpp  MyVector.cpp  RotateComand.cpp
test/: CMakeLists.txt  test_1_moveComand.cpp  test_2_moveComand.cpp  test_3_moveComand.cpp  test_4_rotateComand.cpp
